[package]
name = "ratatui-tree-widget"
description = "Tree Widget for ratatui"
version = "0.12.0"
license = "MIT"
repository = "https://github.com/woxjro/ratatui-tree-widget"
authors = ["woxjro", "EdJoPaTo <tui-tree-widget-rust-crate@edjopato.de>"]
edition = "2021"
keywords = ["tui", "terminal", "tree", "widget"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.28.1", features = ["all-widgets"] }
unicode-width = "0.1"

[dependencies.crossterm]
version = "0.26.1"
features = ["event-stream"]
